--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
